[package]
name = "recipe"
version = "0.1.0"
edition = "2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = { version = "1", features = ["full"] }
actix-web = "4"
serde = { version = "1.0.151", features = ["derive"] }
log = "0.4.17"
env_logger = "0.10.0" # RUST_LOG=main to enable all logging
chrono = "0.4.23"
uuid = { version="1.2.2", features=["v4","fast-rng"] }
# handlebars = "4.3.5" # Templates
